<resources>

    <string name="app_name">Xue</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Study Tool</string>
    <string name="ecButtonLabel">English - Chinese</string>
    <string name="ceButtonLabel">Chinese - English</string>
    <string name="exitButtonLabel">Exit</string>
    <string name="show">show</string>
    <string name="okay">okay</string>
    <string name="title_CEActivity">Chinese-English Trainer</string>
    <string name="quit">Confirm quit</string>
    <string name="reallyQuit">Quit and lose all progress on current deck?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
	<string name="new_vocab_available">Vocabulary Update Available</string>
	
    <string name="menu_settings">Settings</string>
    <string name="menu_show_progress">Show Status</string>
	
	<string name="pref_key_deck_size_ec">pref_deck_size_ec</string>
	<string name="pref_title_deck_size_ec">English-Chinese Deck Size</string>
	<string name="pref_summary_deck_size_ec">Set the size of the deck (5-100 cards) in the English-Chinese activity.</string>
	
	<string name="pref_key_deck_size_ce">pref_deck_size_ce</string>
	<string name="pref_title_deck_size_ce">Chinese-English Deck Size</string>
	<string name="pref_summary_deck_size_ce">Set the size of the deck (5-100 cards) in the Chinese-English activity.</string>
	
	<string name="pref_key_learning_pool_size_ec">pref_learning_pool_size_ec</string>
	<string name="pref_title_learning_pool_size_ec">English-Chinese Learning Pool Size</string>
	<string name="pref_summary_learning_pool_size_ec">Set the number of cards in the English-Chinese learning pool.</string>
	
	<string name="pref_key_learning_pool_size_ce">pref_learning_pool_size_ce</string>
	<string name="pref_title_learning_pool_size_ce">Chinese-English Learning Pool Size</string>
	<string name="pref_summary_learning_pool_size_ce">Set the number of cards in the Chinese-English learning pool.</string>
	
	<string name="pref_key_audio_feedback_on">pref_audio_feedback_on</string>
	<string name="pref_title_audio_feedback_on">Audio Feedback Enabled</string>
	<string name="pref_summary_audio_feedback_on">Enables or disables audio feedback.</string>
	
	<string name="title_activity_prefs">Settings</string>
	
	<!-- Progress Info Screen Strings -->
    <string name="title_progress_info_activity">Learning Status</string>
	<string name="prog_title">Learning Status</string>
	<string name="prog_subheader_summary">Overall Learning Progress</string>
	<string name="prog_subheader_last_deck"></string>
	<string name="prog_last_deck_lvl0_label">Level 0</string>
	<string name="prog_last_deck_lvl1_label">Level 1</string>
	<string name="prog_last_deck_lvl2_label">Level 2</string>
	<string name="prog_last_deck_lvl3_label">Level 3</string>
	<string name="prog_last_deck_lvl4_label">Level 4</string>
	<string name="prog_header_ec">English-Chinese Learning</string>
	<string name="prog_header_ce">Chinese-English Learning</string>
	<string name="prog_decks_comp_label">Decks Completed:</string>
	<string name="prog_items_learned_label">Items Learned:</string>
	<string name="prog_avg_items_learned_per_day_label">Avg Items Learned per Day:</string>
	
	
	
</resources>