<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/LearningScreenStyle"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    >
    
   
    
    <TextView
        android:id="@+id/promptTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:gravity="bottom|center"
        android:text="@string/hello_world"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:ems="10"
        android:gravity="center"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/otherTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:ems="3"
        android:gravity="top|center"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/controlLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >


        <Button
            android:id="@+id/advanceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show"
            android:textSize="40sp" />

        <Button
            android:id="@+id/okayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay" 
            android:textSize="40sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:gravity="center"
        android:textSize="30sp" />
    
     <TextView
        android:id="@+id/timerTextView"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:gravity="center"
        android:textSize="20sp" />

</LinearLayout>